use the internally accessible solr url for testing -- some of the tests trigger long running queries and timeout the EBI proxy

--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -2,7 +2,7 @@
 baseUrl=http://dev.mousephenotype.org/data
 deploymentPath=/phenotype-archive
 solrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
-internalSolrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
+internalSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/mi/impc/dev/solr
 drupalBaseUrl=https://dev.mousephenotype.org
 mediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/phenotype-archive/media
 googleAnalytics=UA-33310077-1
