include imaging (springrest and all other sub components) in datamodel export

--- a/pom.xml
+++ b/pom.xml
@@ -908,6 +908,7 @@
                                 <include>**/dao/*</include>
                                 <include>**/pojo/*</include>
                                 <include>**/phenotype/util/*</include>
+                                <include>**/phenotype/imaging/**</include>
                                 <include>**/data/europhenome/*</include>
                                 <include>**/data/impress/*</include>
                                 <include>**/stats/**</include>
