--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -30,7 +30,7 @@
 
 	<context-param>
       <param-name>baseUrl</param-name>
-      <param-value>${baseUrl}</param-value>
+      <param-value>/phenotype-archive/</param-value>
    </context-param>
    
    <context-param>
