--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>uk.ac.sanger</groupId>
             <artifactId>phenodigm2-core</artifactId>
-            <version>1.3.1</version>
+            <version>1.3</version>
         </dependency>
 
         <dependency>
@@ -1179,7 +1179,7 @@
             <id>external-user</id>
 
             <properties>
-                <baseUrl>/data</baseUrl>
+                <baseUrl>/phenotype-archive</baseUrl>
                 <!-- The solrUrl bypasses the proxy at mousephenotype.org and goes directly 
                 to EBI servers for performance -->
                 <solrUrl>https://wwwdev.ebi.ac.uk/mi/impc/dev/solr</solrUrl>
