add app-config to the classpath when building the war

--- a/pom.xml
+++ b/pom.xml
@@ -159,21 +159,7 @@
             <version>${servlet.api.version}</version>
             <scope>provided</scope>
         </dependency>
-        
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jsp-api</artifactId>
-            <version>2.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
-            <scope>provided</scope>
-        </dependency>
-        
+                
         <!-- Bean Validation Dependencies -->
 
         <dependency>
@@ -593,6 +579,16 @@
 
     <build>
         <finalName>phenotype-archive</finalName>
+
+		<!-- Include the spring app-config in the classpath -->
+		<resources>
+			<resource>
+				<directory>${basedir}/WebContent/WEB-INF</directory>
+				<includes>
+					<include>app-config.xml</include>
+				</includes>
+        	</resource>
+		</resources>
 
         <pluginManagement>
             <plugins>
