include maven default resources directory

--- a/pom.xml
+++ b/pom.xml
@@ -588,6 +588,9 @@
 					<include>app-config.xml</include>
 				</includes>
         	</resource>
+        	<resource>
+				<directory>${basedir}/src/main/resources</directory>
+        	</resource>
 		</resources>
 
         <pluginManagement>
