--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,11 @@
 
     <dependencies>
 
-
+        <dependency>
+    <groupId>org.yaml</groupId>
+    <artifactId>snakeyaml</artifactId>
+    <version>1.14-SNAPSHOT</version>
+  </dependency>
 
         <!--Phenodigm disease pages dependencies -->
         <dependency>
@@ -556,7 +560,13 @@
 
     </dependencies>
 
-    <repositories>
+   <repositories>
+         <repository>
+    <id>Sonatype-public</id>
+    <name>SnakeYAML repository</name>
+    <url>http://oss.sonatype.org/content/groups/public/</url>
+  </repository>
+  
         <!-- OWL TOOLS -->
         <repository>
             <id>BerkeleyBOP</id>
