--- a/pom.xml
+++ b/pom.xml
@@ -907,6 +907,7 @@
                                 <include>**/bean/*</include>
                                 <include>**/dao/*</include>
                                 <include>**/pojo/*</include>
+                                <include>**/phenotype/data/imits/*</include>
                                 <include>**/phenotype/util/*</include>
                                 <include>**/phenotype/imaging/**</include>
                                 <include>**/data/europhenome/*</include>
