Updated tests and adjusted testIterations.properties file. Added automatic randomizing when desired row count < database row count.

--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -1,15 +1,34 @@
-# baseUrl=http://localhost:8080/phenotype-archive
-baseUrl=http://dev.mousephenotype.org/data
-deploymentPath=/phenotype-archive
-solrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
-internalSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/mi/impc/dev/solr
-drupalBaseUrl=https://dev.mousephenotype.org
-mediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/phenotype-archive/media
-googleAnalytics=UA-33310077-1
+# --- all---
 phenodigmSolrUrl=http://solr-slave-sanger.sanger.ac.uk/solr451/phenodigm
+googleAnalytics=UA-33310077-1
+
+
+# --- dev---
+# baseUrl=http://dev.mousephenotype.org/data
+# solrUrl=https://wwwdev.ebi.ac.uk/mi/impc/dev/solr
+# internalSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/mi/impc/dev/solr
+# drupalBaseUrl=https://dev.mousephenotype.org
+# mediaBaseUrl=https://dev.mousephenotype.org/data/media
+# deploymentPath=/phenotype-archive
+# liveSite=false
+
+#######mediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/phenotype-archive/media
+
+
+# --- beta---
+baseUrl=http://beta.mousephenotype.org/data
+solrUrl=https://www.ebi.ac.uk/mi/impc/beta/solr
+internalSolrUrl=http://localhost:8090/mi/impc/beta/solr
+drupalBaseUrl=https://beta.mousephenotype.org
+mediaBaseUrl=https://beta.mousephenotype.org/data/media
 liveSite=false
 
-# Selenium setup
+
+# --- localhost---
+# baseUrl=http://localhost:8080/phenotype-archive
+
+
+# --- Selenium setup---
 # seleniumUrl=http://localhost:8080/phenotype-archive
 # seleniumUrl=http://localhost:4444/wd/hub
 
