This change finalizes the changes to the DataExportTest for gene pages.

--- a/src/test/resources/testIterations.properties
+++ b/src/test/resources/testIterations.properties
@@ -68,3 +68,7 @@ testMGI_MPLinksAreValid=1000
 testPageForEveryMPTermId=1000
 testPageForEveryTopLevelMPTermId=1000
 testPageForEveryIntermediateLevelMPTermId=1000
+
+# DataExportTest
+# testGeneDownloads
+testGeneDownloads=10
