Refactored dropDownPhenPage to add the download url to div#exportIconsDiv.

--- a/src/test/resources/testIterations.properties
+++ b/src/test/resources/testIterations.properties
@@ -71,4 +71,6 @@ testPageForEveryIntermediateLevelMPTermId=1000
 
 # DataExportTest
 # testGeneDownloads
-testGeneDownloads=10
+# testPhenotypeDownloads
+testGeneDownloads=1000
+testPhenotypeDownloads=10
