--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -4,24 +4,24 @@ googleAnalytics=UA-33310077-1
 
 
 # --- dev---
-# baseUrl=http://dev.mousephenotype.org/data
-# solrUrl=https://wwwdev.ebi.ac.uk/mi/impc/dev/solr
-# internalSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/mi/impc/dev/solr
-# drupalBaseUrl=https://dev.mousephenotype.org
-# mediaBaseUrl=https://dev.mousephenotype.org/data/media
-# deploymentPath=/phenotype-archive
-# liveSite=false
+baseUrl=http://dev.mousephenotype.org/data
+solrUrl=https://wwwdev.ebi.ac.uk/mi/impc/dev/solr
+internalSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/mi/impc/dev/solr
+drupalBaseUrl=https://dev.mousephenotype.org
+mediaBaseUrl=https://dev.mousephenotype.org/data/media
+deploymentPath=/phenotype-archive
+liveSite=false
 
 #######mediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/phenotype-archive/media
 
 
 # --- beta---
-baseUrl=http://beta.mousephenotype.org/data
-solrUrl=https://www.ebi.ac.uk/mi/impc/beta/solr
-internalSolrUrl=http://localhost:8090/mi/impc/beta/solr
-drupalBaseUrl=https://beta.mousephenotype.org
-mediaBaseUrl=https://beta.mousephenotype.org/data/media
-liveSite=false
+# baseUrl=http://beta.mousephenotype.org/data
+# solrUrl=https://www.ebi.ac.uk/mi/impc/beta/solr
+# internalSolrUrl=http://localhost:8090/mi/impc/beta/solr
+# drupalBaseUrl=https://beta.mousephenotype.org
+# mediaBaseUrl=https://beta.mousephenotype.org/data/media
+# liveSite=false
 
 
 # --- localhost---
@@ -36,6 +36,7 @@ liveSite=false
 # seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4443/wd/hub
 
 seleniumUrl=http://mi-selenium-mac.windows.ebi.ac.uk:4444/wd/hub
+# seleniumUrl=http://localhost:4444/wd/hub
 
 # Does not show pages changing, but is run as a service
 #seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4444/wd/hub
