--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -5,6 +5,8 @@ googleAnalytics=UA-33310077-1
 
 # --- dev---
 baseUrl=http://dev.mousephenotype.org/data
+# direct baseUrl:
+# baseUrl=http://ves-ebi-d0:8080/mi/impc/dev/phenotype-archive
 solrUrl=https://wwwdev.ebi.ac.uk/mi/impc/dev/solr
 internalSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/mi/impc/dev/solr
 drupalBaseUrl=https://dev.mousephenotype.org
