include service/dto classes in datamodel

--- a/pom.xml
+++ b/pom.xml
@@ -913,6 +913,7 @@
 								<include>**/data/impress/*</include>
 								<include>**/stats/**</include>
 								<include>**/service/**</include>
+								<include>**/service/dto/**</include>
 								<include>**/phenotype/error/**</include>
 								<include>**/generic/util/*</include>
 								<include>**/web/util/*</include>
