--- a/pom.xml
+++ b/pom.xml
@@ -540,6 +540,13 @@
             <version>0.7.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code</groupId>
+            <artifactId>sitemapgen4j</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <repositories>
