--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -4,17 +4,15 @@ googleAnalytics=UA-33310077-1
 
 
 # --- dev---
-baseUrl=http://dev.mousephenotype.org/data
+# baseUrl=http://dev.mousephenotype.org/data
 # direct baseUrl:
-# baseUrl=http://ves-ebi-d0:8080/mi/impc/dev/phenotype-archive
+baseUrl=http://ves-ebi-d0:8080/mi/impc/dev/phenotype-archive
 solrUrl=https://wwwdev.ebi.ac.uk/mi/impc/dev/solr
 internalSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/mi/impc/dev/solr
 drupalBaseUrl=https://dev.mousephenotype.org
 mediaBaseUrl=https://dev.mousephenotype.org/data/media
 deploymentPath=/phenotype-archive
 liveSite=false
-
-#######mediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/phenotype-archive/media
 
 
 # --- beta---
@@ -31,7 +29,6 @@ liveSite=false
 
 
 # --- Selenium setup---
-# seleniumUrl=http://localhost:8080/phenotype-archive
 # seleniumUrl=http://localhost:4444/wd/hub
 
 # Shows pages changing, but is NOT run as a service, need to manually start it
