--- a/pom.xml
+++ b/pom.xml
@@ -919,6 +919,7 @@
                                 <include>**/phenotype/imaging/**</include>
                                 <include>**/data/europhenome/*</include>
                                 <include>**/data/impress/*</include>
+                                <include>**/chart/**</include>
                                 <include>**/stats/**</include>
                                 <include>**/service/**</include>
                                 <include>**/service/dto/**</include>
