impc images back into gene page and points to omero dev internal server url

--- a/src/main/resources/appConfig.properties
+++ b/src/main/resources/appConfig.properties
@@ -13,4 +13,4 @@ mediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/phenotype-archive/media
 googleAnalytics=UA-33310077-1
 phenodigmSolrUrl=http://solr-slave-sanger.sanger.ac.uk/solr451/phenodigm
 liveSite=false
-impcMediaBaseUrl=http://172.22.68.222:4080/webgateway
+impcMediaBaseUrl=http://ves-ebi-cf:80/omero/webgateway
