Displaying pre QC data on gene page.

--- a/src/main/resources/appConfig.properties
+++ b/src/main/resources/appConfig.properties
@@ -14,3 +14,4 @@ googleAnalytics=UA-33310077-1
 phenodigmSolrUrl=http://solr-slave-sanger.sanger.ac.uk/solr451/phenodigm
 liveSite=false
 impcMediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/media/omero/webgateway
+phenodigm.solrserver=http://solr-master-sanger.sanger.ac.uk/solr451/phenodigm
