--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -34,6 +34,8 @@ liveSite=false
 # seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4443/wd/hub
 
 seleniumUrl=http://mi-selenium-mac.windows.ebi.ac.uk:4444/wd/hub
+
+# seleniumUrl=http://172.22.70.122:4444/wd/hub
 # seleniumUrl=http://localhost:4444/wd/hub
 
 # Does not show pages changing, but is run as a service
