--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 
         <solrUrl>http://wwwdev.ebi.ac.uk/mi/impc/dev/solr</solrUrl>
         <internalSolrUrl>http://ves-ebi-d0.ebi.ac.uk:8090/mi/impc/dev/solr</internalSolrUrl>
+        <buildIndexesSolrUrl>http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes</buildIndexesSolrUrl>
 
         <drupalBaseUrl>https://dev.mousephenotype.org</drupalBaseUrl>
 
@@ -59,7 +60,12 @@
 
     <dependencies>
 
-
+		<!-- jDom -->
+		<dependency>
+			<groupId>jdom</groupId>
+			<artifactId>jdom</artifactId>
+			<version>1.1</version>
+		</dependency>
 
         <!--Phenodigm disease pages dependencies -->
         <dependency>
@@ -1282,6 +1288,7 @@
                 to EBI servers for performance -->
                 <solrUrl>https://www.ebi.ac.uk/mi/impc/beta/solr</solrUrl>
                 <internalSolrUrl>http://localhost:8090/mi/impc/beta/solr</internalSolrUrl>
+                <buildIndexesSolrUrl>http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes_beta</buildIndexesSolrUrl>
                 <mediaBaseUrl>https://beta.mousephenotype.org/data/media</mediaBaseUrl>
                 <impcMediaBaseUrl>http://wwwdev.ebi.ac.uk/mi/media/omero/webgateway</impcMediaBaseUrl>
                 <googleAnalytics>UA-33310077-1</googleAnalytics>
@@ -1340,6 +1347,7 @@
                 to EBI servers for performance -->
                 <solrUrl>https://www.ebi.ac.uk/mi/impc/solr</solrUrl>
                 <internalSolrUrl>http://localhost:8090/mi/impc/solr</internalSolrUrl>
+               	<buildIndexesSolrUrl>http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes_live</buildIndexesSolrUrl>
                 <phenodigm.solrserver>http://solr-slave-sanger.sanger.ac.uk/solr451/phenodigm</phenodigm.solrserver>
                 <mediaBaseUrl>https://www.mousephenotype.org/data/media</mediaBaseUrl>
                 <impcMediaBaseUrl>http://wwwdev.ebi.ac.uk/mi/media/omero/webgateway</impcMediaBaseUrl>
