--- a/src/main/resources/appConfig.properties
+++ b/src/main/resources/appConfig.properties
@@ -3,8 +3,11 @@ baseUrl=/PhenotypeArchive
 deploymentPath=/phenotype-archive
 
 # change both solrUrl and internalSolrUrl to point to new place (OR POM file)
-solrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
+#solrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
+solrUrl=http://localhost:8090/solr
 internalSolrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
+buildIndexesSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes
+
 #solrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes_ci
 #internalSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes_ci
 
