add preqcXmlfile location

--- a/src/main/resources/appConfig.properties
+++ b/src/main/resources/appConfig.properties
@@ -7,6 +7,7 @@ deploymentPath=/phenotype-archive
 solrUrl=http://localhost:8090/solr
 internalSolrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
 buildIndexesSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes
+preqcXmlfile=/nfs/web-hx/webadmin/tomcat/bases/mouseinformatics/solr_home_phenotypes_test/datafiles/PhenotypeCallSummary.xml
 
 #solrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes_ci
 #internalSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes_ci
