--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <solrUrl>http://wwwdev.ebi.ac.uk/mi/impc/dev/solr</solrUrl>
         <internalSolrUrl>http://ves-ebi-d0.ebi.ac.uk:8090/mi/impc/dev/solr</internalSolrUrl>
         <buildIndexesSolrUrl>http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes</buildIndexesSolrUrl>
+        <preqcXmlfile>/nfs/web-hx/webadmin/tomcat/bases/mouseinformatics/solr_home_phenotypes_test/datafiles/PhenotypeCallSummary.xml</preqcXmlfile>
 
 
 		<drupalBaseUrl>https://dev.mousephenotype.org</drupalBaseUrl>
