--- a/pom.xml
+++ b/pom.xml
@@ -841,6 +841,7 @@
 							<includes>
 								<include>**/web.xml</include>
 								<include>**/app-config.xml</include>
+								<include>**/index-app-config.xml</include>
 								<include>**/views/404.jsp</include>
 								<include>**/views/identifierError.jsp</include>
 							</includes>
