--- a/pom.xml
+++ b/pom.xml
@@ -1300,6 +1300,24 @@
             </properties>
 
 			<build>
+                <resources>
+                    <resource>
+                        <directory>src/test/resources</directory>
+                        <targetPath>${basedir}/target/test-classes</targetPath>
+                        <includes>
+                            <include>**/test-config.xml</include>
+                        </includes>
+                        <filtering>true</filtering>
+                    </resource>
+                    <resource>
+                        <directory>${basedir}/WebContent/WEB-INF</directory>
+                        <filtering>true</filtering>
+                        <targetPath>src/main/resources</targetPath>
+                        <includes>
+                            <include>**/index-app-config.xml</include>
+                        </includes>
+                    </resource>
+                </resources>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -1359,6 +1377,24 @@
             </properties>
 
 			<build>
+                <resources>
+                    <resource>
+                        <directory>src/test/resources</directory>
+                        <targetPath>${basedir}/target/test-classes</targetPath>
+                        <includes>
+                            <include>**/test-config.xml</include>
+                        </includes>
+                        <filtering>true</filtering>
+                    </resource>
+                    <resource>
+                        <directory>${basedir}/WebContent/WEB-INF</directory>
+                        <filtering>true</filtering>
+                        <targetPath>src/main/resources</targetPath>
+                        <includes>
+                            <include>**/index-app-config.xml</include>
+                        </includes>
+                    </resource>
+                </resources>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
