--- a/pom.xml
+++ b/pom.xml
@@ -1186,7 +1186,15 @@
 						</includes>
 						<filtering>true</filtering>
 					</resource>
-				</resources>
+                    <resource>
+                        <directory>${basedir}/WebContent/WEB-INF</directory>
+                        <filtering>true</filtering>
+                        <targetPath>src/main/resources</targetPath>
+                        <includes>
+                            <include>**/index-app-config.xml</include>
+                        </includes>
+                    </resource>
+                    </resources>
 				<pluginManagement>
 					<plugins>
 						<plugin>
