--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<spring.version>3.1.4.RELEASE</spring.version>
 		<slf4j.version>1.7.7</slf4j.version>
 		<java.version>1.7</java.version>
-		<junit.version>4.11</junit.version>
+		<junit.version>4.11</junit.version>d
 		<hibernate.show_sql>true</hibernate.show_sql>
 		<hibernate.dialect>org.hibernate.dialect.MySQLDialect</hibernate.dialect>
 		<hibernate.version>3.6.10.Final</hibernate.version>
@@ -67,7 +67,7 @@
 		<dependency>
 			<groupId>uk.ac.sanger</groupId>
 			<artifactId>phenodigm2-core</artifactId>
-			<version>1.4.0</version>
+			<version>1.5.0</version>
 		</dependency>
 
 		<dependency>
