update to use new phenodigm url

--- a/src/main/resources/appConfig.properties
+++ b/src/main/resources/appConfig.properties
@@ -16,7 +16,7 @@ human2mouseFile=/nfs/web-hx/webadmin/tomcat/bases/mouseinformatics/solr_home_phe
 drupalBaseUrl=https://dev.mousephenotype.org
 mediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/phenotype-archive/media
 googleAnalytics=UA-33310077-1
-phenodigmSolrUrl=http://solr-slave-sanger.sanger.ac.uk/solr451/phenodigm
+phenodigmSolrUrl=http://solrcloudlive.sanger.ac.uk/solr/phenodigm
 liveSite=false
 impcMediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/media/omero/webgateway
-phenodigm.solrserver=http://solr-master-sanger.sanger.ac.uk/solr451/phenodigm
+phenodigm.solrserver=http://solrcloudlive.sanger.ac.uk/solr/phenodigm
