add defaults for solr urls for phenodigm and imits

--- a/src/main/resources/appConfig.properties
+++ b/src/main/resources/appConfig.properties
@@ -20,3 +20,4 @@ phenodigmSolrUrl=http://solrcloudlive.sanger.ac.uk/solr/phenodigm
 liveSite=false
 impcMediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/media/omero/webgateway
 phenodigm.solrserver=http://solrcloudlive.sanger.ac.uk/solr/phenodigm
+imits.solrserver=http://ikmc.vm.bytemark.co.uk:8983/solr/allele2
