default to the dev phenodigm

--- a/src/main/resources/appConfig.properties
+++ b/src/main/resources/appConfig.properties
@@ -19,5 +19,5 @@ googleAnalytics=UA-33310077-1
 phenodigmSolrUrl=http://solrcloudlive.sanger.ac.uk/solr/phenodigm
 liveSite=false
 impcMediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/media/omero/webgateway
-phenodigm.solrserver=http://solrcloudlive.sanger.ac.uk/solr/phenodigm
+phenodigm.solrserver=http://solrclouddev.sanger.ac.uk/solr/phenodigm
 imits.solrserver=http://ikmc.vm.bytemark.co.uk:8983/solr/allele2
