Removed hard-coded command-line args for --index-app-config.xml in MAIndexer.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ datasourcesConfig.properties
 # Auto-generated Solr files
 /src/main/solr/*/core.properties
 /src/main/solr/*/data
+/nbactions-dev-web-tests.xml
