--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
 
     <dependencies>
 
+		<!--  orace jdbc driver -->
+		<dependency>
+		  <groupId>com.oracle</groupId>
+		  <artifactId>ojdbc6</artifactId>
+		  <version>11.2.0</version>
+		</dependency>
+		
+
         <!--Phenodigm disease pages dependencies -->
         <dependency>
             <groupId>uk.ac.sanger</groupId>
@@ -1235,7 +1243,7 @@
                 <internalSolrUrl>http://localhost:8090/mi/impc/beta/solr</internalSolrUrl>
                 <buildIndexesSolrUrl>http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes_beta</buildIndexesSolrUrl>
                 <mediaBaseUrl>https://beta.mousephenotype.org/data/media</mediaBaseUrl>
-                <impcMediaBaseUrl>//www.ebi.ac.uk/mi/media/omero/webgateway</impcMediaBaseUrl>
+                <impcMediaBaseUrl>//wwwdev.ebi.ac.uk/mi/media/omero/webgateway</impcMediaBaseUrl>
                 <googleAnalytics>UA-33310077-1</googleAnalytics>
                 <liveSite>false</liveSite>
             </properties>
@@ -1304,7 +1312,7 @@
                 <buildIndexesSolrUrl>http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes_live</buildIndexesSolrUrl>
                 <phenodigm.solrserver>http://solrcloudlive.sanger.ac.uk/solr/phenodigm</phenodigm.solrserver>
                 <mediaBaseUrl>https://www.mousephenotype.org/data/media</mediaBaseUrl>
-                <impcMediaBaseUrl>//www.ebi.ac.uk/mi/media/omero/webgateway</impcMediaBaseUrl>
+                <impcMediaBaseUrl>//wwwdev.ebi.ac.uk/mi/media/omero/webgateway</impcMediaBaseUrl>
                 <googleAnalytics>UA-23433997-1</googleAnalytics>
                 <liveSite>true</liveSite>
             </properties>
