--- a/pom.xml
+++ b/pom.xml
@@ -61,13 +61,19 @@
 
     <dependencies>
 
-		<!--  orace jdbc driver -->
-		<dependency>
-		  <groupId>com.oracle</groupId>
-		  <artifactId>ojdbc6</artifactId>
-		  <version>11.2.0</version>
-		</dependency>
+				<!--  orace jdbc driver -->
+				<dependency>
+				  	<groupId>com.oracle</groupId>
+				  	<artifactId>ojdbc6</artifactId>
+				  	<version>11.2.0</version>
+				</dependency>
 		
+				<dependency>
+						<groupId>net.sf.opencsv</groupId>
+						<artifactId>opencsv</artifactId>
+						<version>2.3</version>
+				</dependency>
+
 
         <!--Phenodigm disease pages dependencies -->
         <dependency>
